--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ p {
 #nombre h2 {
   font-size: 1em;
   margin-left: 2px;
+  margin-top: 5px;
   font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
 }
 
