--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
 #nombre h1 {
   font-size: 2.5em;
   font-weight: 700;
-  font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   margin-bottom: -6px;
 }
 
@@ -53,7 +53,7 @@ p {
   font-size: 1em;
   margin-left: 2px;
   margin-top: 5px;
-  font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 #area-principal {
@@ -134,15 +134,15 @@ section:last-child {
   width: 72.5%;
 }
 
-.titulo-seccion h1 {
-  font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+.titulo-seccion h2 {
+  font-family: Helvetica, Arial, sans-serif;
   font-style: italic;
   font-size: 1.5em;
   color: #cf8a05;
 }
 
 .contenido-seccion h2 {
-  font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 1.5em;
   margin-bottom: -2px;
 }
